<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:longClickable="false"
    android:touchscreenBlocksFocus="true"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PortifolioActivity"
            style="@style/activityStyle"
            android:nestedScrollingEnabled="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">

            <TextView android:text="@string/activity_title" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="15dp"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/textView" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button01_spotify"
                android:id="@+id/button01"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:width="200dp"
                style="@style/ButtonStyle"
                android:elegantTextHeight="true"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:longClickable="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button02_scores"
                android:id="@+id/button02"
                android:layout_below="@+id/button01"
                android:layout_alignStart="@+id/button01"
                android:layout_alignEnd="@+id/button01"
                style="@style/ButtonStyle"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button03_library"
                android:id="@+id/button03"
                android:layout_below="@+id/button02"
                android:layout_alignStart="@+id/button02"
                android:layout_alignEnd="@+id/button02"
                android:onClick="buttonEvent"
                style="@style/ButtonStyle"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button04_buildbigger"
                android:id="@+id/button04"
                android:layout_below="@+id/button03"
                android:layout_alignStart="@+id/button03"
                android:layout_alignEnd="@+id/button03"
                style="@style/ButtonStyle"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button05_reader"
                android:id="@+id/button05"
                android:layout_below="@+id/button04"
                android:layout_alignStart="@+id/button04"
                android:layout_alignEnd="@+id/button04"
                style="@style/ButtonStyle"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button06_capstone"
                android:id="@+id/button06"
                android:layout_below="@+id/button05"
                android:layout_alignStart="@+id/button05"
                android:layout_alignEnd="@+id/button05"
                android:focusable="false"
                style="@style/ButtonStyle2"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
